// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldBase renders the FieldBase with children 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div>
      <h1>
        Foo bar
      </h1>
    </div>
  </div>
</div>
`;

exports[`FieldBase renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
  />
</div>
`;
